# UniverseLogLine

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOY_FORCE_1759561956.txt  DEPLOY_TRIGGER.md  DEPLOY_TRIGGER_V2.txt  Dockerfile  Dockerfile.engine  Dockerfile.id  Dockerfile.rules  Dockerfile.timeline  FORCE_REBUILD.txt  LOGLINE_IDS.md  MORNING_DEPLOY.md  Makefile  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_MANUAL_DEPLOY.md  RAILWAY_MANUAL_SETUP.md  README.md  ROADMAP  ROADMAP.md  Roadmap_and_tasklist_Universe_LogLine.md  SECURITY.md  TASKLIST.md  create-logline-ids.sh  deploy-railway.sh  docker-compose.yml  lib.rs  manifesto_logline.lll  recibo_loja_0001.lll  setup_postgres.sh  system.manifest.lll  teste_enforcement.lll
LogLine Network OS/: ChatGPT-Projeto LogLine OS.md  README.md
LogLine Network OS/docs/: architecture.mmd
LogLine Network OS/installer/: install.sh
LogLine Network OS/manifests/: logline_onboarding_v31.lll  logline_onboarding_v31_plus.lll  logline_orchestration_network.lll  logline_orchestration_network_v2.lll  logline_orchestration_network_v3.lll  logline_orchestration_network_v4.lll
LogLine Network OS/modules/: attestation_hub.lll  audit_wallet.lll  compliance_automation.lll  compliance_guard.lll  consensus_engine.lll  core_ext.lll  core_schema.lll  device_probe.lll  edge_connectivity.lll  edge_connectivity_ext.lll  enzyme_bindings.lll  enzyme_catalog.lll  enzyme_runtime.lll  enzyme_runtime_ext.lll  federation_bridge.lll  ghost_protocol.lll  gpu_scheduler.lll  id_orchestration.lll  incident_response.lll  infrastructure_as_code.lll  installer_bootstrap.lll  interactive_cli.lll  magnetic_field.lll  memory_coordinator.lll  metrics_harvester.lll  native_wallet_integration.lll  node_registry.lll  observability_mesh.lll  onboarding_api.lll  onboarding_plugplay.lll  onboarding_telemetry.lll  orchestration_controller.lll  orchestration_multi.lll  policy_primitives.lll  posture_checks.lll  posture_checks_ext.lll  processing_distributor.lll  progressive_onboarding.lll  qr_issuer.lll  quantum_resistant.lll  (+24 more)
docs/: api-gateway.md  architecture.md  federation-service.md  index.md  logline-deployment-cleanup-protocol.md  logline-federation-node-deployment-master-plan.md  security-guide.md
enforcement/: audit.rs  contextual_enforcer.rs  enforcer.rs  hierarchy.rs  manifest_validator.rs  mod.rs  multi_tenant_roles.rs  offline_guard.rs  roles.rs  validator.rs  verification_example.rs  verification_spans.rs
grammar/: grammar_core.lll  grammar_lab.lll  grammar_loader.rs  grammar_minicontratos.lll  grammar_validator.rs  grammar_vtv.lll  mod.rs
infra/: mod.rs
logline-cli/: Cargo.toml  README.md
logline-core/: Cargo.toml
logline-engine/: Cargo.toml
logline-gateway/: Cargo.toml
logline-gateway/src/: config.rs  health.rs  lib.rs  main.rs  rate_limit.rs  rest_routes.rs  routing.rs  security.rs  ws_routes.rs
logline-rules/: Cargo.toml
logline-rules/src/: engine.rs  error.rs  lib.rs  loader.rs  service.rs
logline-timeline/: Cargo.toml
logline-timeline/src/: main.rs  repository.rs
motor/: engine.rs  executor.rs  mod.rs  rollback.rs  rollback_test.rs  rotator.rs  runtime.rs  scheduler.rs  span.rs  timekeeper.rs  types.rs
observer/: aggregator.lll  ai_summary.lll  alerts.lll  anomaly.lll  firehose.lll  forecast.lll  health.lll  integrity_telemetry.lll  persist.lll  query.lll
rules/: mod.rs  runtime_clock.lll
scripts/: railway_api_setup.sh  teste_enforcement.sh  unificar_projeto.sh
src/: errors.rs  lib.rs  main.rs  onboarding.rs
tests/: gateway.rs
time/: adaptive_clock.rs  mod.rs  multi_project_example.rs  project_clock_manager.rs  time_model.rs
timeline/: hashbundle.rs  mod.rs  replay.rs  timeline.rs  timeline_ndjson.rs  timeline_postgres.rs  timeline_tenant.rs
(+37 files in other folders)
