[package]
name = "logline-cli"
version = "0.1.0"
edition = "2021"
authors = ["LogLine Team"]
description = "Command-line interface for the LogLine Universe"
license = "MIT"

[[bin]]
name = "logline"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.4"
dirs = "5.0"
toml = "0.8"
thiserror = "1.0"
colored = "2.0"
rand = "0.8"
chacha20poly1305 = "0.10"

# LogLine dependencies
logline-core = { path = "../logline-core" }
logline-protocol = { path = "../logline-protocol" }

[dev-dependencies]
tempfile = "3.9"
wiremock = "0.5"
