[package]
name = "logline-gateway"
version = "0.1.0"
edition = "2021"
authors = ["LogLine Team"]
description = "API Gateway centralizando comunicações REST e WebSocket para o LogLine Universe"
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "ws"] }
futures = "0.3"
logline-core = { path = "../logline-core" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
url = "2.4"
uuid = { version = "1.6", features = ["v4"] }
hyper = "1.4"
dotenvy = "0.15"
async-trait = "0.1"
http-body-util = "0.1"

[dev-dependencies]
serde_json = "1.0"
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
anyhow = "1.0"
hyper = "1.4"
dotenvy = "0.15"
