[package]
name = "logline-rules"
version = "0.1.0"
edition = "2021"
description = "Rules engine and enforcement primitives for the LogLine ecosystem"
license = "MIT"
authors = ["LogLine Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
logline-protocol = { path = "../logline-protocol" }
tracing = "0.1"
