[package]
name = "logline-timeline"
version = "0.1.0"
edition = "2021"
description = "Timeline microservice for the LogLine platform"
authors = ["LogLine Team"]
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { version = "1.34", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
thiserror = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
logline-core = { path = "../logline-core" }
logline-protocol = { path = "../logline-protocol" }
logline-rules = { path = "../logline-rules" }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
hyper = "1.4"

[dev-dependencies]
tokio = { version = "1.34", features = ["macros", "rt", "rt-multi-thread"] }
